# log_stream

./: .gitignore  README.md
log_collector/: CMakeLists.txt  Makefile  main.cpp
log_collector/core/: DBWriter.cpp  DBWriter.hpp  LogEntry.hpp  LogParser.cpp  LogParser.hpp  MessageQueue.hpp  Pipeline.hpp
log_collector/server/: ClientSession.cpp  ClientSession.hpp  EpollLoop.cpp  EpollLoop.hpp  TcpServer.cpp  TcpServer.hpp
log_collector/test/: FakeWriter.cpp  LogParserTest.cpp  PipelineTest.cpp
test_docker/: docker-compose.yml
